--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
   "emailBucket": "scbd-ses-inbound",
   "emailKeyPrefix": "chm-cbd.net/",
   "forwardMapping": {
-    "support@chm-cbd.net":             [ "alexandre.rafalovitch@cbd.int" ],
-    "bioland-contributor@chm-cbd.net": [ "alexandre.rafalovitch@cbd.int" ],
-    "bioland-cm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int" ],
-    "bioland-sm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int" ],
-    "country-cm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int" ]
+    "support@chm-cbd.net":             [ "alexandre.rafalovitch@cbd.int", "randy.houlahan@cbd.int", "randy.houlahan@un.org", "Rodrigo.Elias@cbd.int", "ray.goh@cbd.int" ],
+    "bioland-contributor@chm-cbd.net": [ "alexandre.rafalovitch@cbd.int", "randy.houlahan@cbd.int", "randy.houlahan@un.org", "Rodrigo.Elias@cbd.int", "ray.goh@cbd.int"  ],
+    "bioland-cm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int", "randy.houlahan@cbd.int", "randy.houlahan@un.org", "Rodrigo.Elias@cbd.int", "ray.goh@cbd.int"  ],
+    "bioland-sm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int", "randy.houlahan@cbd.int", "randy.houlahan@un.org", "Rodrigo.Elias@cbd.int", "ray.goh@cbd.int"  ],
+    "country-cm@chm-cbd.net":          [ "alexandre.rafalovitch@cbd.int", "randy.houlahan@cbd.int", "randy.houlahan@un.org", "Rodrigo.Elias@cbd.int", "ray.goh@cbd.int"  ]
   }
 }
